...
    android:background="#000000"
    android:contentDescription="Player screen"
    android:keepScreenOn="true">

    <!-- Fullscreen Video Surface -->
    <androidx.media3.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="Player video surface"
        app:show_buffering="when_playing"
        app:use_controller="false"
        app:resize_mode="fit" />
...

        <ImageButton
            android:id="@+id/topAudioOnlyButton"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignTop="@id/closeButton"
            android:layout_toStartOf="@+id/menuButton"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_headphones"
            android:contentDescription="Play as Music"
            android:scaleType="centerInside" />

...
